Fixed build config. Fixed bugs in game creation. Fixed layout on smaller devices.

--- a/src/index.css
+++ b/src/index.css
@@ -27,17 +27,17 @@ input[type="text"], input[type="password"] {
 	color: #6e5f57;
 }
 
+button[disabled] {
+  opacity: 0.5;
+}
+
 .button {
     border-radius: 40px;
-    height: 30px;
     background: linear-gradient(to right,#ffc300,#ffd058);
     background-size: 200% 40px;
     display: inline-block;
-    padding: 10px 20px;
     color: white;
     text-decoration: none;
-    line-height: 28px;
-    font-size: 20px;
     text-transform: uppercase;
     font-family: Kanit;
     font-style: italic;
@@ -50,13 +50,28 @@ input[type="text"], input[type="password"] {
     border: none;
     outline: none;
     cursor: pointer;
-    height: 50px;
     text-shadow: 1px 1px #daa600;
+    font-size: 15px;
+    height: 40px;
+    padding: 0 15px;
+}
+
+.button .plus {
+  font-style: normal;
+  line-height: 3px;
+  display: inline-block;
+  background-color: #6a6159;
+  padding: 6px 5px 9px 6px;
+  border-radius: 31px;
+  font-size: 24px;
+  color: #00c0ff;
+  text-shadow: none;
+  vertical-align: middle;
 }
 
 .button:hover {
 	box-shadow: 0 11px 26px -7px #ffe277;
-    transition: 1s all;
+  transition: 1s all;
 }
 
 .button:active{
@@ -68,12 +83,8 @@ input[type="text"], input[type="password"] {
   --header-height: 90px;
 }
 
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 50px;
+  height: 30px;
   display: inline-block;
 }
 
@@ -81,48 +92,37 @@ input[type="text"], input[type="password"] {
   color: white;
   padding: 20px;
   background-color: #fffdf6;
-  text-align: center;
   box-shadow: 0 10px 131px -22px #fff1bf;
   overflow: auto;
   height: var(--header-height);
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .App-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - var(--header-height));
-  padding: 10px;
+  padding: 20px;
 }
 
 .App-header .button.login {
-  position: absolute;
-  right: 20px;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+  position: relative;
 }
 
 .App-header .button.login:hover {
-  top: -10px;
+  top: -4px;
 }
 
 .App-header .button.login:active{
   top: 0;
-  }
+}
 
-.button .plus {
-  vertical-align: initial;
-  font-style: normal;
-  line-height: 3px;
-  display: inline-block;
-  background-color: #6a6159;
-  padding: 6px 5px 9px 6px;
-  border-radius: 31px;
-  font-size: 24px;
-  color: #00c0ff;
-  text-shadow: none;
+.leaderboardContainer {
+  max-width: 100%;
+  overflow-y: auto;
 }
 
 .leaderboard {
@@ -130,6 +130,8 @@ input[type="text"], input[type="password"] {
   border: 1px solid #f9f0df;
   border-spacing: 0;
   font-size: 15px;
+  white-space: nowrap;
+  position: relative;
 }
 
 .leaderboard th {
@@ -145,6 +147,7 @@ input[type="text"], input[type="password"] {
 
 .leaderboard td {
   color: #6a6159;
+  text-align: center;
 }
 
 .leaderboard tr:first-child, .leaderboard tr:nth-child(2), .leaderboard tr:nth-child(3) {
@@ -179,6 +182,16 @@ input[type="text"], input[type="password"] {
 
 .leaderboard th + th:not(:nth-child(2)):not(:nth-child(3)):not(:nth-child(4)) {
   border-left: 1px solid #f9f0df;
+}
+
+.leaderboard tbody td:not(:first-child):not(:nth-child(2)):not(:nth-child(3)) {
+  border-left: 1px solid #fbf0dd;
+}
+
+.gamePerc {
+  font-size: 12px;
+  opacity: 0.6;
+  vertical-align: middle;
 }
 
 .loginModal {
@@ -254,7 +267,7 @@ input[type="text"], input[type="password"] {
 }
 
 .addScoreModal .gamesList .gameSelect {
-  width: 200px;
+  width: 130px;
 }
 
 .addScoreModal .gamesList .game + .game {
@@ -298,28 +311,29 @@ input[type="text"], input[type="password"] {
 }
 
 .addScoreModal .gamesList .playerList .player .actions {
-  margin-left: auto;
+  margin-top: 15px;
+  margin-left: 6px;
   width: 40px;
 }
 
 .addScoreModal .player label {
   display: block;
   text-align: center;
-  font-size: 14px;
+  font-size: 11px;
 }
 
 .addScoreModal .player input[type="text"] {
   padding: 3px;
   font-weight: bold;
   font-family: Kanit;
-  width: 50px;
   text-align: center;
-  font-size: 18px;
+  width: 35px;
+  font-size: 16px;
 }
 
 .addScoreModal .player .played {
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 3px;
 }
 
 .addScoreModal .player .played, .addScoreModal .player .won {
@@ -327,8 +341,9 @@ input[type="text"], input[type="password"] {
 }
 
 .addScoreModal .player .name {
-  width: 200px;
+  width: 130px;
   padding-top: 18px;
+  font-size: 16px;
 }
 
 .addScoreModal .button.removeGame {
@@ -349,7 +364,7 @@ input[type="text"], input[type="password"] {
   font-weight: bold;
   font-size: 15px;
   padding: 6px;
-  width: 135px;
+  width: 105px;
   font-family: Kanit;
   background-color: #fffefa;
 }
@@ -361,11 +376,10 @@ input[type="text"], input[type="password"] {
 
 .ReactModal__Content {
   position: relative;
-  margin: 20px auto 0 auto;
   background-color: #f7f7f7;
   border: 1px solid #e4e4e4;
   outline: none;
-  padding: 10px 20px 20px 20px;
+  padding: 10px;
   max-height: calc(100vh - 30px);
   overflow-y: auto;
 }
@@ -378,7 +392,6 @@ input[type="text"], input[type="password"] {
   line-height: 0px;
   float: right;
   display: block;
-  vertical-align: bottom;
   position: absolute;
   top: 0;
   right: 0;
@@ -405,4 +418,64 @@ input[type="text"], input[type="password"] {
   margin-bottom: 5px;
   font-style: normal;
   font-size: 13px;
+}
+
+@media screen and (min-width: 600px) {
+  .App-logo {
+    height: 50px;
+  }
+
+  .App-header {
+    text-align: center;
+    justify-content: flex-end;
+    position: relative;
+  }
+
+  .App-logo {
+    position: absolute;
+    left: 0;
+    margin: auto;
+    right: 0;
+  }
+
+  .App-content {
+    padding: 50px 20px;
+  }
+
+  .button {
+    font-size: 20px;
+    height: 50px;
+    padding: 0px 20px;
+  }
+
+  .addScoreModal .date {
+    width: 135px;
+  }
+
+  .addScoreModal .gamesList .gameSelect, .addScoreModal .player .name {
+    width: 200px;
+  }
+
+  .addScoreModal .player label {
+    font-size: 14px;
+  }
+
+  .addScoreModal .player .played {
+    margin-right: 20px;
+  }
+
+  .addScoreModal .gamesList .playerList .player .actions {
+    margin-top: auto;
+    margin-left: auto;
+  }
+
+  .addScoreModal .player input[type="text"] {
+    font-size: 18px;
+    width: 50px;
+  }
+
+  .ReactModal__Content {
+    padding: 10px 20px 20px 20px;
+    margin: 20px auto 0 auto;
+  }
 }
